HU9706: Recuperacion y sobrescritura de contrasena.
